Update sliders colors, display correct color range
 Changes to be committed:
	modified:   javascript.js
	modified:   style.css

--- a/style.css
+++ b/style.css
@@ -43,11 +43,11 @@ svg {
   width: 80%;
   border-top-right-radius: 1rem;
   border-top-left-radius: 1rem;
-  pointer-events: none;
   background-color: rgba(255, 255, 255);
   /* opacity: 0; */
   /* Adjustment class added*/
   /* transform: translateY(100px); */
+  /* pointer-events: none; */
   transition: all 0.5s ease-in-out;
 }
 .sliders.active {
@@ -105,4 +105,23 @@ svg {
   background: none;
   cursor: pointer;
   margin: 2rem 0rem;
+}
+
+/* Slider styles  */
+input[type="range"] {
+  -webkit-appearance: none;
+  margin: 1rem 0rem;
+  width: 100%;
+  position: relative;
+  border-radius: 1rem;
+  cursor: pointer;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  border: black;
+  background: white;
+  height: 0.7rem;
+  width: 0.7rem;
+  border-radius: 50%;
 }
